--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,6 +4,8 @@
     <a routerLink='/ngr-welcome'> welcome</a> &nbsp;
     <a routerLink='/ngr-basic'> basic</a> &nbsp;
     <a routerLink='/ngr-user'> userAccount</a> &nbsp;
+    <a routerLink='/ngr-conversion'> conversion</a> &nbsp;
+    <a routerLink="/ngr-logInOut">oauth2/oidc logInOut</a>&nbsp;
     <a routerLink='/ngr-devise'> devise (crud)</a> &nbsp;
     <a routerLink='/ngr-demo'> demo</a> &nbsp;
 </p> 
