--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,48 +1,48 @@
 <h3>User (UserAccount)</h3>
 <form #formUser="ngForm">
   <div class="form-group row">   
-    <label class="col-sm-4 text-sm-end">id:</label>
-    <div class="col-sm-8">{{user.id}}</div>
+    <label class="col-sm-2 text-sm-end">id:</label>
+    <div class="col-sm-10">{{user.id}}</div>
   </div>
   <div class="form-group row">   
-    <label class="col-sm-4 text-sm-end">username:</label>
-    <div class="col-sm-8">
+    <label class="col-sm-2 text-sm-end">username:</label>
+    <div class="col-sm-10">
        <input [(ngModel)]="user.username" name="username" 
        class="form-control  mb-1" required  pattern="[a-zA-Z].+" > 
     </div>
   </div>
   <div class="form-group row">   
-    <label class="col-sm-4 text-sm-end">firstName:</label>
-    <div class="col-sm-8">
+    <label class="col-sm-2 text-sm-end">firstName:</label>
+    <div class="col-sm-10">
        <input [(ngModel)]="user.firstName" name="firstName" 
        class="form-control  mb-1" pattern="[a-zA-Z].+" > 
     </div>
   </div>
   <div class="form-group row">   
-    <label class="col-sm-4 text-sm-end">lastName:</label>
-    <div class="col-sm-8">
+    <label class="col-sm-2 text-sm-end">lastName:</label>
+    <div class="col-sm-10">
        <input [(ngModel)]="user.lastName" name="lastName" 
        class="form-control  mb-1" pattern="[a-zA-Z].+" > 
     </div>
   </div>
   <div class="form-group row">   
-    <label class="col-sm-4 text-sm-end">email:</label>
-    <div class="col-sm-8">
+    <label class="col-sm-2 text-sm-end">email:</label>
+    <div class="col-sm-10">
        <input [(ngModel)]="user.email" name="email" 
        class="form-control  mb-1" pattern="[a-zA-Z].+" > 
     </div>
   </div>
   <div class="form-group row">
-    <label class="col-sm-4 text-sm-end">newPassword:</label>
-    <div class="col-sm-8">
+    <label class="col-sm-2 text-sm-end">newPassword:</label>
+    <div class="col-sm-10">
        <input [(ngModel)]="user.newPassword" name="newPpassword" 
        placeholder="at least 3 characters"
        type="password" class="form-control  mb-1" minlength="3" > 
     </div>
   </div>
   <div class="form-group row">
-    <label class="col-sm-4 text-sm-end">mainGroup:</label>
-    <div class="col-sm-8">
+    <label class="col-sm-2 text-sm-end">mainGroup:</label>
+    <div class="col-sm-10">
         <select [(ngModel)]="user.mainGroup" class="form-control mb-1"
          name="mainGroup"> 
             <option>user_of_sandboxrealm</option>
@@ -52,7 +52,7 @@
     </div>
   </div>
   <div class="form-group row">
-    <div class="col-sm-8 offset-sm-4">
+    <div class="col-sm-10 offset-sm-2">
     <button class="btn btn-primary"  (click)="onSave()" 
           [disabled]="!formUser.form.valid" > 
           Save <span class="badge badge-primary">
@@ -62,8 +62,21 @@
         <button class="btn btn-primary"  (click)="onFetchFromUsername()" 
           [disabled]="!formUser.form.valid" > 
           Fetch From Username 
-        </button>
+        </button> &nbsp;
+      <button class="btn btn-primary"  (click)="onDelete()" 
+        [disabled]="!formUser.form.valid || !existingUser" > 
+        Delete existing User 
+      </button>
     </div>
   </div>
 </form>
 message: {{message}}
+<hr/>
+NB: do not delete or update "admin1" , "mgr1" , "user1" <br/>
+If updated or deleted , theses users (used by demo/tp) must be restored :<br/>
+<ul>
+  <li>mgr1/pwd1 (mainGroup=manager_of_sandboxrealm )</li> 
+  <li>admin1/pwd1 (mainGroup=admin_of_sandboxrealm )</li> 
+  <li>user1/pwd1 (mainGroup=user_of_sandboxrealm  )</li> 
+</ul>
+
