--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<h3>User (UserAccount)</h3>
+<h3>User (UserAccount) , <input type="checkbox" [(ngModel)]="userService.standalone" /> standalone users (without oauth2/oidc server, development only)</h3>
 <form #formUser="ngForm">
   <div class="form-group row">   
     <label class="col-sm-2 text-sm-end">id:</label>
